Changes while working on asteroid functionality